--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
       "email": "ghergedan@gmail.com"
     }
   ],
+  "require": {
+    "php": "^8.1"
+  },
   "require-dev": {
     "mlevent/file-cache": "^0.1.0"
   },
